# modelx-cython

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
LICENSES/: LICENSE_MONKEYTYPE.txt
doc/source/images/: modelx-ecosystem.drawio
examples/: profile_basicterm_s.py  run_basicterm_s.py  run_basicterm_sc.py  sample.py  sample_sc.py
examples/BasicTerm_SC_nomx/: __init__.py  _mx_classes.py  _mx_io.py  _mx_model.py  disc_rate_ann.xlsx  model_point_table.xlsx  mort_table.xlsx
examples/BasicTerm_S_nomx/: _mx_classes.py  _mx_io.py  _mx_model.py  _mx_sys.py  disc_rate_ann.xlsx  model_point_table.xlsx  mort_table.xlsx
modelx_cython/: __init__.py  __main__.py  _mx_sys.pxd  builder.py  cli.py  config.py  consts.py  monkeytype_tracing.py  parser.py  tracer.py  tracing.py  transformer.py  typedefs.py
modelx_cython/tests/: test_config.py  test_samples.py
modelx_cython/tests/samples/array_size/: assert_cy.py  sample.py  spec_large.py  spec_small.py
modelx_cython/tests/samples/array_size/ArraySize/: __init__.py
modelx_cython/tests/samples/basicterm_s/: assert_basicterm_s.py  assert_cy.py  benchmark.py  config.py  sample.py
modelx_cython/tests/samples/basicterm_s/BasicTerm_S_nomx/: __init__.py  _mx_io.py  mort_table.xlsx
modelx_cython/tests/samples/basicterm_sc/: assert_cy.py  benchmark.py  sample.py
modelx_cython/tests/samples/deep_recursion/: assert_cy.py  sample.py  spec.py
modelx_cython/tests/samples/duplicated_params/: assert_cy.py  sample.py
modelx_cython/tests/samples/index_range/: assert_cy.py  sample.py
modelx_cython/tests/samples/nested_params/: assert_cy.py  sample.py
modelx_cython/tests/samples/no_spec/: assert_cy.py  sample.py
modelx_cython/tests/samples/ref_space/: assert_cy.py  sample.py
modelx_cython/tests/samples/size_spec_change/: assert_cy_new.py  assert_cy_old.py  sample.py  spec_new.py  spec_old.py
modelx_cython/tests/samples/various_types/: assert_cy_no_sample.py  no_sample.py
modelx_cython/tests/samples/varying_integral_types_of_args/: assert_cy.py  sample.py
modelx_cython/tests/samples/varying_types_of_args/: assert_cy.py  sample.py
samples/: config.py
samples/BasicTerm_S_nomx/: _mx_classes.py  _mx_model.py
(+30 files in other folders)
