[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "modelx-cython"
description = "Cythonize modelx models."
readme = "README.md"
keywords = [
    "finance",
    "quants",
    "actuary",
]
dynamic = ["version"]
requires-python = ">=3.7"
authors = [
  { name = "Fumito Hamamura", email = "fumito.ham@gmail.com" },
]
dependencies = [
    "modelx",
    "libcst",
    "Cython",
    "setuptools",
    "MonkeyType",
    "numpy",
]
license = { text = "LGPLv3" }

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Scientific/Engineering :: Mathematics",

    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]


[project.urls]
Homepage = "https://modelx.io"
Documentation = "https://docs.modelx.io"
Repository = "https://github.com/fumitoh/modelx-cython.git"

[project.scripts]
mx2cy = "modelx_cython.cli:entry_point_main"

[tool.setuptools.dynamic.version]
attr = "modelx_cython.__version__"


[tool.setuptools.packages.find]
include = ["modelx_cython*"]
exclude = ["doc", "temp*", "modelx_cython.tests*", "samples"]
